# parallel_programming

./: CMakeLists.txt  README.md  final_project.txt
include/common/: cifar10_loader.h
include/cpu/: autoencoder.h  layers.h
notebooks/: Phase1_CPU_Baseline.ipynb
src/common/: cifar10_loader.cpp
src/cpu/: autoencoder.cpp  layers.cpp  main_cpu.cpp
